k8s-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: go-kubernetes
  labels:
    name: go-kubernetes
    module: Namespace
