k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  # annotations:
      # kubernetes.io/ingress.class: nginx
  namespace: go-kubernetes
  labels:
    name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kp.sing3demons
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client
            port: 
              number: 8081
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client
            port: 
              number: 8081
